# humanization-playwright

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: test.yml
humanization/: __init__.py  core.py
humanization_playwright.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py  tests_core.py
